Skeleton for sample work section on home

--- a/home.html
+++ b/home.html
@@ -23,13 +23,40 @@
 		</header>
 		
 		<section id="introduction">
-			
+			<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+			<p> Esse, atque quos perferendis numquam officiis molestias</p>
 		</section>
 		<section id="samplework">
-			
+			<div class='sampleItem'>
+				<a href="portfolioPiece1">
+					<img src="portfolioPiece1Image" alt="">
+					<div class="portfolioPieceInfo">
+						<h3>Title of Piece</h3>
+						<p>Explanation of Piece</p>
+					</div>
+			</div>
+			<div class='sampleItem'>
+				<a href="portfolioPiece2">
+					<img src="portfolioPiece2Image" alt="">
+					<div class="portfolioPieceInfo">
+						<h3>Title of Piece</h3>
+						<p>Explanation of Piece</p>
+					</div>
+			</div>
+			<div class='sampleItem'>
+				<a href="portfolioPiece2">
+					<img src="portfolioPiece2Image" alt="">
+					<div class="portfolioPieceInfo">
+						<h3>Title of Piece</h3>
+						<p>Explanation of Piece</p>
+					</div>
+			</div>
 		</section>
 		<section id="skills">
-			
+			<h3>Skills</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui molestiae deleniti cupiditate repudiandae, eaque
+				 temporibus id, officiis eligendi, voluptatum, atque quo possimus blanditiis nemo dolores expedita! Voluptatibus ex numquam, assumenda.</p>
+				 <!-- Program logos? Languages? Just explanation? Nothing? -->
 		</section>
 		<section id="links">
 			<div id="headshot">
@@ -48,7 +75,7 @@
 			<div id="socialMedia">
 				<h3>SOCIAL MEDIA</h3>
 				<ul>
-					<li>githu</li>
+					<li>github</li>
 					<li>Bitbucket</li>
 					<li>Linkedin</li>
 				</ul>
