adjusted styles for nav and intro

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 			<div id="navName">
 				<a href="home.html">RYAN BELL</a>
 			</div>
-			<div>
+			<div class="navList">
 				<ul>
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
@@ -26,8 +26,8 @@
 		</nav>
 		
 		<section id="introduction">
-			<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-			<p> Esse, atque quos perferendis numquam officiis molestias</p>
+			<h1>Tagline to catch attention and decribe me</h1>
+			<p>Programming, Modeling, Developing</p>
 		</section>
 		<section id="samplework">
 			<div class='sampleItem'>
