--- a/home.html
+++ b/home.html
@@ -65,30 +65,32 @@
 				 <!-- Program logos? Languages? Just explanation? Nothing? -->
 		</section>
 		<section id="links">
-			<div id="headshot">
-				<img class="circlePicture" src="media/profilePicture.png" alt="A picture of me" height="180" width="180">
-			</div>
-			<div id="basicinfo">
-				<h3>HELLO</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis autem inventore labore voluptatem dolor,
-					 quasi perspiciatis magni laborum explicabo officiis repellat debitis 
-					 necessitatibus deserunt dolorum exercitationem quibusdam sed consequatur esse!</p>
-			</div>
-			<div id="email">
-				<h3>EMAIL ME</h3>
-				<p><a href="mailto:RyanBell@mail.rit.edu">RyanBell@mail.rit.edu</a></p>
-			</div>
-			<div id="socialMedia">
-				<h3>SOCIAL MEDIA</h3>
-				<ul>
-					<li>github</li>
-					<li>Bitbucket</li>
-					<li>Linkedin</li>
-				</ul>
-			</div>
-			<div id="call">
-				<h3>CALL ME</h3>
-				<p>267.893.0688</p>
+			<div id="linksContainer">
+				<div id="headshot">
+					<img class="circlePicture" src="media/profilePicture.jpg" alt="A picture of me" height="180" width="180">
+				</div>
+				<div id="basicinfo">
+					<h3>HELLO</h3>
+					<p>My name is Ryan Bell and this is temporary text to fill the space of where I would give a quick description
+						of who I am, what I do, and information like me being a student at Rochester Institute of Technology.
+					</p>
+				</div>
+				<div id="email">
+					<h3>EMAIL ME</h3>
+					<p><a href="mailto:RyanBell@mail.rit.edu">RyanBell@mail.rit.edu</a></p>
+				</div>
+				<div id="socialMedia">
+					<h3>SOCIAL MEDIA</h3>
+					<ul>
+						<li>github</li>
+						<li>Bitbucket</li>
+						<li>Linkedin</li>
+					</ul>
+				</div>
+				<div id="call">
+					<h3>CALL ME</h3>
+					<p>267.893.0688</p>
+				</div>
 			</div>
 		</section>
 		
