Moving elements at the bottom of the homepage

--- a/home.html
+++ b/home.html
@@ -66,6 +66,7 @@
 		</section>
 		<section id="links">
 			<div id="linksContainer">
+				<div id="row1">
 				<div id="headshot">
 					<img class="circlePicture" src="media/profilePicture.jpg" alt="A picture of me" height="180" width="180">
 				</div>
@@ -75,21 +76,22 @@
 						of who I am, what I do, and information like me being a student at Rochester Institute of Technology.
 					</p>
 				</div>
-				<div id="email">
-					<h3>EMAIL ME</h3>
-					<p><a href="mailto:RyanBell@mail.rit.edu">RyanBell@mail.rit.edu</a></p>
 				</div>
+				<div id="row2">
 				<div id="socialMedia">
-					<h3>SOCIAL MEDIA</h3>
+					<!--will be replaced by small icons that are links to the sites -->
 					<ul>
-						<li>github</li>
+						<li>Github</li>
 						<li>Bitbucket</li>
 						<li>Linkedin</li>
 					</ul>
 				</div>
-				<div id="call">
-					<h3>CALL ME</h3>
+				<!-- It might just be ;better to have this info in the contact page only
+				<div id="basiccontact">
+					<p><a href="mailto:RyanBell@mail.rit.edu">RyanBell@mail.rit.edu</a></p>
 					<p>267.893.0688</p>
+				</div>
+				-->
 				</div>
 			</div>
 		</section>
