Positional changes to the sample work section

--- a/home.html
+++ b/home.html
@@ -32,7 +32,9 @@
 		<section id="samplework">
 			<div class='sampleItem'>
 				<a href="portfolioPiece1">
+				<img src="media/JustDoIt.jpg" alt="" />
 					<div class="portfolioPieceInfo">
+						
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
 					</div>
@@ -41,6 +43,7 @@
 			<div class='sampleItem'>
 				<a href="portfolioPiece2">
 					<div class="portfolioPieceInfo">
+						<img src="media/JustDoIt.jpg" alt="" />
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
 					</div>
@@ -49,18 +52,20 @@
 			<div class='sampleItem'>
 				<a href="portfolioPiece2">
 					<div class="portfolioPieceInfo">
+						<img src="media/JustDoIt.jpg" alt="" />
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
 					</div>
 				</a>
 			</div>
 		</section>
+		<!--
 		<section id="skills">
 			<h3>Skills</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui molestiae deleniti cupiditate repudiandae, eaque
 				 temporibus id, officiis eligendi, voluptatum, atque quo possimus blanditiis nemo dolores expedita! Voluptatibus ex numquam, assumenda.</p>
-				 <!-- Program logos? Languages? Just explanation? Nothing? -->
-		</section>
+				  Program logos? Languages? Just explanation? Nothing?
+		</section>-->
 		<section id="links">
 			<div id="linksContainer">
 				<div id="row1">
