Changed to sample elements and worked on the footer

--- a/home.html
+++ b/home.html
@@ -32,9 +32,7 @@
 		<section id="samplework">
 			<div class='sampleItem'>
 				<a href="portfolioPiece1">
-				<img src="media/JustDoIt.jpg" alt="" />
 					<div class="portfolioPieceInfo">
-						
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
 					</div>
@@ -43,16 +41,14 @@
 			<div class='sampleItem'>
 				<a href="portfolioPiece2">
 					<div class="portfolioPieceInfo">
-						<img src="media/JustDoIt.jpg" alt="" />
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
 					</div>
 				</a>	
 			</div>
 			<div class='sampleItem'>
-				<a href="portfolioPiece2">
+				<a href="portfolioPiece3">
 					<div class="portfolioPieceInfo">
-						<img src="media/JustDoIt.jpg" alt="" />
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
 					</div>
@@ -69,25 +65,28 @@
 		<section id="links">
 			<div id="linksContainer">
 				<div id="row1">
-				<div id="headshot">
-					<img class="circlePicture" src="media/profilePicture.jpg" alt="A picture of me" height="180" width="180">
-				</div>
-				<div id="basicinfo">
-					<h3>HELLO</h3>
-					<p>My name is Ryan Bell and this is temporary text to fill the space of where I would give a quick description
-						of who I am, what I do, and information like me being a student at Rochester Institute of Technology.
-					</p>
-				</div>
+					<div id="headshot">
+						<img class="circlePicture" src="media/profilePicture.jpg" alt="A picture of me" height="180" width="180">
+					</div>
+					<div id="basicinfo">
+						<h3>HELLO</h3>
+						<p>My name is Ryan Bell and this is temporary text to fill the space of where I would give a quick description
+							of who I am, what I do, and information like me being a student at Rochester Institute of Technology.
+						</p>
+					</div>
 				</div>
 				<div id="row2">
-				<div id="socialMedia">
-					<!--will be replaced by small icons that are links to the sites -->
-					<ul>
-						<li>Github</li>
-						<li>Bitbucket</li>
-						<li>Linkedin</li>
-					</ul>
+					<div id="socialMedia">
+						<!--will be replaced by small icons that are links to the sites -->
+						<ul>
+							<li>Github</li>
+							<li>Bitbucket</li>
+							<li>Linkedin</li>
+						</ul>
+					</div>
 				</div>
+			</div>
+		</section>
 				<!-- It might just be ;better to have this info in the contact page only
 				<div id="basiccontact">
 					<p><a href="mailto:RyanBell@mail.rit.edu">RyanBell@mail.rit.edu</a></p>
@@ -96,9 +95,10 @@
 				</div>
 			</div>
 		</section>
+		-->
 		
 		<footer>
-			<h8>&copy;2016 Ryan Bell. All Rights Reserved.</h8>
+			<h5>&copy;2016 Ryan Bell. All Rights Reserved.</h5>
 		</footer>
 	</body>
 </html>
