replaced temp art with rough actual art

--- a/home.html
+++ b/home.html
@@ -1,3 +1,13 @@
+<!-- Portfolio Pieces List
+Processing Music visualizer
+Minion renders
+Hard drive saw when finished
+Humans vs Zombies when new effect is added
+Processing Music Visualizer
+Processing UI when finished
+Asteroids when finished
+Switchblade
+-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -30,7 +40,7 @@
 			<p>Programming, Modeling, Developing</p>
 		</section>
 		<section id="samplework">
-			<div class='sampleItem'>
+			<div class='sampleItem1'>
 				<a href="portfolioPiece1">
 					<div class="portfolioPieceInfo">
 						<h3>Title of Piece</h3>
@@ -38,7 +48,7 @@
 					</div>
 				</a>
 			</div>
-			<div class='sampleItem'>
+			<div class='sampleItem2'>
 				<a href="portfolioPiece2">
 					<div class="portfolioPieceInfo">
 						<h3>Title of Piece</h3>
@@ -46,7 +56,7 @@
 					</div>
 				</a>	
 			</div>
-			<div class='sampleItem'>
+			<div class='sampleItem3'>
 				<a href="portfolioPiece3">
 					<div class="portfolioPieceInfo">
 						<h3>Title of Piece</h3>
