Added non-converted processing code

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@ Switchblade
 		</section>
 		<section id="samplework">
 			<div class='sampleItem1'>
-				<a href="portfolioPiece1">
+				<a href="pieces/Asteroids/asteroids.html">
 					<div class="portfolioPieceInfo">
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
