--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="home.html">RYAN BELL</a>
+				<a href="../../home.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
@@ -30,22 +30,6 @@
 		</section>
 		<div class="sketch">
 		<script src="../../media/processing.min.js"></script>
-		<!--<script type="application/processing" data-processing-target="asteroids">
-			/* @asteroids transparent="true"; */
-			void setup() {
-				size(400, 300);
-				stroke(230);
-				background(252);}
-			void draw() {
-				fill(252,252,252,30);
-				rect(0,0,width,height);
-				fill(sin((float)millis()/1000*2*PI)*255,0,120);
-				ellipse(mouseX,mouseY,25,25);
-				for (int i = 0; i < 10; i++){
-					ellipse(mouseX + cos(radians(i*36+millis()/100))*20, mouseY + sin(radians(i*36+millis()/100))*20,10,10);}
-			}
-		</script>
-		<canvas id="asteroids"></canvas>-->
 		<canvas data-processing-sources="Asteroids.pde"></canvas>
 		</div>
 	</body>
