removed unused files, switched out picture, added links

--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@ Switchblade
 				</a>	
 			</div>
 			<div class='sampleItem3'>
-				<a href="portfolioPiece3">
+				<a href="pieces/Asteroids/asteroids.html">
 					<div class="portfolioPieceInfo">
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
@@ -89,9 +89,9 @@ Switchblade
 					<div id="socialMedia">
 						<!--will be replaced by small icons that are links to the sites -->
 						<ul>
-							<li>Github</li>
-							<li>Bitbucket</li>
-							<li>Linkedin</li>
+							<li><a href="https://github.com/RyanofRIT">Github</a><li>
+							<li><a href="https://bitbucket.org/rjb1928/">Bitbucket</a></li>
+							<li><a href="https://www.linkedin.com/in/ryanbellsoftware">Linkedin</a></li>
 						</ul>
 					</div>
 				</div>
