--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@ Switchblade
 				</a>
 			</div>
 			<div class='sampleItem2'>
-				<a href="portfolioPiece2">
+				<a href="pieces/Music/web-export/Music.html">
 					<div class="portfolioPieceInfo">
 						<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>
@@ -76,7 +76,7 @@ Switchblade
 			<div id="linksContainer">
 				<div id="row1">
 					<div id="headshot">
-						<img class="circlePicture" src="media/profilePicture.jpg" alt="A picture of me" height="180" width="180">
+						<img class="circlePicture" src="media/ProfilePicture.jpg" alt="A picture of me" height="180" width="180">
 					</div>
 					<div id="basicinfo">
 						<h3>HELLO</h3>
