Created and added personal Logo. Removed links

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@ Switchblade
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 		<!-- Uncomment when logo is complete and converted to an ico file -->
-		<!-- <link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico" -->
+		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>	
 	</head>
 	<body>
@@ -43,24 +43,24 @@ Switchblade
 			<div class='sampleItem1'>
 				<a href="pieces/Asteroids/asteroids.html">
 					<div class="portfolioPieceInfo">
-						<h3>Title of Piece</h3>
-						<p>Explanation of Piece</p>
+					<!--	<h3>Title of Piece</h3>
+						<p>Explanation of Piece</p>-->
 					</div>
 				</a>
 			</div>
 			<div class='sampleItem2'>
 				<a href="pieces/Music/web-export/Music.html">
 					<div class="portfolioPieceInfo">
-						<h3>Title of Piece</h3>
-						<p>Explanation of Piece</p>
+					<!--	<h3>Title of Piece</h3>
+						<p>Explanation of Piece</p>-->
 					</div>
 				</a>	
 			</div>
 			<div class='sampleItem3'>
 				<a href="pieces/Asteroids/asteroids.html">
 					<div class="portfolioPieceInfo">
-						<h3>Title of Piece</h3>
-						<p>Explanation of Piece</p>
+					<!--	<h3>Title of Piece</h3>
+						<p>Explanation of Piece</p>-->
 					</div>
 				</a>
 			</div>
