Converted HvZ code added html files for projects, updated home

--- a/home.html
+++ b/home.html
@@ -6,7 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
-		<title>Ryan Bell</title>	
+		<title>Ryan Bell</title>
+		<style>
+			@media (min-width: 1300px){
+				#samplework{width:100%;height:500px;}
+				.sampleItem1{width:33.33%; float: left;}
+				.sampleItem2{width:33.33%; float: left;}
+				.sampleItem3{width:33.33%; float: left;}
+			}
+		</style>
 	</head>
 	<body>
 		<nav>
@@ -24,12 +32,12 @@
 		</nav>
 		
 		<section id="introduction">
-			<h1>Tagline to catch attention and decribe me</h1>
-			<p>Programming, Modeling, Developing</p>
+			<h1>I create visual and interactive applications</h1>
+			<p>Programming | Developing | Modeling</p>
 		</section>
 		<section id="samplework">
 			<div class='sampleItem1'>
-				<a href="pieces/Asteroids/asteroids.html">
+				<a href="pieces/Minion/minion.html">
 					<div class="portfolioPieceInfo">
 					<!--	<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>-->
@@ -37,7 +45,7 @@
 				</a>
 			</div>
 			<div class='sampleItem2'>
-				<a href="pieces/Music/web-export/Music.html">
+				<a href="pieces/Music/musicvis.html">
 					<div class="portfolioPieceInfo">
 					<!--	<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>-->
@@ -61,25 +69,24 @@
 					</div>
 					<div id="basicinfo">
 						<h3>HELLO</h3>
-						<p>My name is Ryan Bell and this is temporary text to fill the space of where I would give a quick description
-							of who I am, what I do, and information like me being a student at Rochester Institute of Technology.
+						<p>My name is Ryan Bell and I am currently a dual major at Rochester Institute
+							of Technology in Software Engineering and Game Design and Development. 
 						</p>
 					</div>
 				</div>
-				<div id="row2">
-					<div id="socialMedia">
-						<!--will be replaced by small icons that are links to the sites -->
-						<ul>
-							<li><a href="https://github.com/RyanofRIT">Github</a><li>
-							<li><a href="https://bitbucket.org/rjb1928/">Bitbucket</a></li>
-							<li><a href="https://www.linkedin.com/in/ryanbellsoftware">Linkedin</a></li>
-						</ul>
-					</div>
-				</div>
+
 			</div>
 		</section>
 		
 		<footer>
+			<div id="socialMedia">
+				<!--will be replaced by small icons that are links to the sites -->
+				<ul>
+					<li><a href="https://github.com/RyanofRIT">Github</a></li>
+					<li><a href="https://bitbucket.org/rjb1928/">Bitbucket</a></li>
+					<li><a href="https://www.linkedin.com/in/ryanbellsoftware">Linkedin</a></li>
+				</ul>
+			</div>
 			<h5>&copy;2016 Ryan Bell. All Rights Reserved.</h5>
 		</footer>
 	</body>
