mid-conversion process

--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 				</a>
 			</div>
 			<div class='sampleItem2'>
-				<a href="pieces/Music/musicvis.html">
+				<a href="pieces/HumansVsZombies/hvz.html">
 					<div class="portfolioPieceInfo">
 					<!--	<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>-->
