--- a/pieces/HumansVsZombies/web-export/index.html
+++ b/pieces/HumansVsZombies/web-export/index.html
@@ -51,6 +51,7 @@
 // convenience function to get the id attribute of generated sketch html element
 function getProcessingSketchId () { return 'HumansVsZombies'; }
 </script>
+<script src="processing.js" type="text/javascript"></script>
 
 	</head>
 	<body>
@@ -67,7 +68,7 @@ function getProcessingSketchId () { return 'HumansVsZombies'; }
 	    	</div>
 			<h1>HumansVsZombies</h1>
     		<p id="description"></p>
-			<p id="sources">Source code: <a href="HumansVsZombies.pde">HumansVsZombies</a> </p>
+			<p id="sources">Source code: <a href="HumansVsZombies.pde">HumansVsZombies</a> <a href="processing.js">processing.js</a> </p>
 			<p>
 			Built with <a href="http://processing.org" title="Processing">Processing</a>
 			and <a href="http://processingjs.org" title="Processing.js">Processing.js</a>
