Added art for the minion and made a rough html page

--- a/home.html
+++ b/home.html
@@ -7,14 +7,6 @@
 		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
-		<style>
-			@media (min-width: 1300px){
-				#samplework{width:100%;height:500px;}
-				.sampleItem1{width:33.33%; float: left;}
-				.sampleItem2{width:33.33%; float: left;}
-				.sampleItem3{width:33.33%; float: left;}
-			}
-		</style>
 	</head>
 	<body>
 		<nav>
@@ -26,7 +18,7 @@
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
 					<li><a class="navLink" href="resume.html">R&eacute;sum&eacute;</a></li>
-					<li><a class="navLink" href="content.html">Contact</a></li> 
+					<li><a class="navLink" href="contact.html">Contact</a></li> 
 				</ul>
 			</div>
 		</nav>
@@ -70,7 +62,9 @@
 					<div id="basicinfo">
 						<h3>HELLO</h3>
 						<p>My name is Ryan Bell and I am currently a dual major at Rochester Institute
-							of Technology in Software Engineering and Game Design and Development. 
+							of Technology in Software Engineering and Game Design and Development. I enjoy
+							programming visual systems and working with compplex algorithms. I also have
+							a 3D modeling hobby. 
 						</p>
 					</div>
 				</div>
