Added media and html page for TSA Game

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 				<ul>
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
-					<li><a class="navLink" href="resume.html">R&eacute;sum&eacute;</a></li>
+					<li><a class="navLink" href="media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="contact.html">Contact</a></li> 
 				</ul>
 			</div>
@@ -37,7 +37,7 @@
 				</a>
 			</div>
 			<div class='sampleItem2'>
-				<a href="pieces/HumansVsZombies/hvz.html">
+				<a href="pieces/TSAGame/tsagame.html">
 					<div class="portfolioPieceInfo">
 					<!--	<h3>Title of Piece</h3>
 						<p>Explanation of Piece</p>-->
