--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -25,8 +25,8 @@
 		</nav>
 		
 		<section id="introduction">
-			<h1>Something about the projects?</h1>
-			<p>This may not be neccessary</p>
+			<h1>Cellular Asteroids</h1>
+			<p>Processing | 2015</p>
 		</section>
 	
 				<!--[if lt IE 9]>
