--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -11,7 +11,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="home.html">RYAN BELL</a>
+				<a href="../../home.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
