Added the description and media for asteroids page

--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -47,5 +47,18 @@
 				<p>JavaScript is required to view the contents of this page.</p>
 			</noscript>
 		</div>
+		<div class="content">
+			<div class="largerow">
+				<img src="asteroidCapture.png" width="50%" height="auto" alt="Asteroids game" />
+				<h3>
+					This is an adaptation of the classic game Asteroids that I made in processing and 
+					later converted to javascript. In this version of the game, the asteroids have 
+					been replaced by cells that grow and eventually split. The player avoids the 
+					cells with their ship and can force the cells to split by shooting them. If a cell
+					splits and is too small, it dies. The cells' outline is animated by moving control 
+					points with perlin noise and drawing a curved line through these points.  
+				</h3>	
+			</div>
+		</div>
 	</body>
 </html>
