--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -29,7 +29,7 @@
 		</section>
 		<div class="content">
 			<div class="largerow">
-				<img src="ChromeLvl5.jpg" width="50%" height="auto" alt="tpose minion" />
+				<img src="ChromeLvl5.jpg" width="50%" height="auto" alt="chrome engines" />
 				<h3>This is a stylized render of the fifth level of a game that I made with a couple
 					friends during my Senior year of high school. My main role during the game creation
 					process was 3D modeling and AI programming. I worked alongside 
