fixed links and responsiveness of footer

--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
-					<li><a class="navLink" href="resume.html">Resume</a></li>
+					<li><a class="navLink" href="../../media/resume.pdf">Resume</a></li>
 					<li><a class="navLink" href="content.html">Contact</a></li> 
 				</ul>
 			</div>
