--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -17,7 +17,7 @@
 				<ul>
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
-					<li><a class="navLink" href="resume.html">R&eacute;sum&eacute;</a></li>
+					<li><a class="navLink" href="../../media/resume.pdf">Resume</a></li>
 					<li><a class="navLink" href="contact.html">Contact</a></li> 
 				</ul>
 			</div>
