Added content for switchblade

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
-		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
 	</head>
 	<body>
@@ -17,10 +17,16 @@
 				<ul>
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
-					<li><a class="navLink" href="resume.html">R&eacute;sum&eacute;</a></li>
+					<li><a class="navLink" href="media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="contact.html">Contact</a></li> 
 				</ul>
 			</div>
 		</nav>
+		
+		<section id="introduction">
+			<h1>I create visual and interactive applications</h1>
+			<p>Programming | Developing | Modeling</p>
+		</section>
+		
 	</body>
 </html>
