--- a/pieces/SwitchBlade/switchblade.html
+++ b/pieces/SwitchBlade/switchblade.html
@@ -4,29 +4,36 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
+		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
 	</head>
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="home.html">RYAN BELL</a>
+				<a href="../../home.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
-					<li><a class="navLink" href="media/resume.pdf">R&eacute;sum&eacute;</a></li>
+					<li><a class="navLink" href="../../media/resume.pdf">Resume</a></li>
 					<li><a class="navLink" href="contact.html">Contact</a></li> 
 				</ul>
 			</div>
 		</nav>
-		
-		<section id="introduction">
-			<h1>I create visual and interactive applications</h1>
-			<p>Programming | Developing | Modeling</p>
-		</section>
 				
+		<section id="introduction">
+			<h1>SwitchBlade</h1>
+			<p>C# | Monogame | 2015</p>
+		</section>
+		<div class="content">
+			<div class="largerow">
+				<img src="Minion4KReference.png" width="50%" height="auto" alt="tpose minion" />
+				<h3>I made this minion at the end of my Senior year of high school with Autodesk
+					Maya. Most of the materials were made with MentalRay.
+				</h3>	
+			</div>
+		</div>
 	</body>
 </html>
