finished switchblade page

--- a/pieces/SwitchBlade/switchblade.html
+++ b/pieces/SwitchBlade/switchblade.html
@@ -29,10 +29,28 @@
 		</section>
 		<div class="content">
 			<div class="largerow">
-				<img src="Minion4KReference.png" width="50%" height="auto" alt="tpose minion" />
-				<h3>I made this minion at the end of my Senior year of high school with Autodesk
-					Maya. Most of the materials were made with MentalRay.
+				<img src="TitleScreen.png" width="50%" height="auto" alt="title screen" />
+				<h3>I created this game with <a href="https://www.linkedin.com/in/thenelsonscott">Nelson Scott</a>,
+				<a href="https://www.linkedin.com/in/hawkdanny">Daniel Hawk</a>, and
+				<a href="https://www.linkedin.com/in/petertlockhart">Peter Lockhart</a> during my Freshman year of college.
+				It was made in C# with Monogame and revolved around the concept of following a sword as it changes hands 
+				during battle.
 				</h3>	
+			</div>
+			<div class="largerow">
+				<img src="LoadingScreen.jpg" width="50%" height="auto" alt="LoadingScreen.jpg" />
+				<h3>The game had a custom character creation feature and special abilities specific to 
+					each of the four factions. My main role was with the map generation which was completely
+					procedural.
+				</h3>
+			</div>
+			<div class="largerow">
+				<img src="Capture.png" width="50%" height="auto" alt="LoadingScreen.jpg" />
+				<h3>The map creation process included my own implementation of Perlin noise.
+					This was used to blend two background textures as well as creating the 
+					edges of the pathways. Placement of objects and the setting of collision
+					boxes was also done on startup through code. 
+				</h3>
 			</div>
 		</div>
 	</body>
