Deleted extra files, changed all contact links to notes.html

--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -16,10 +16,10 @@
 			</div>
 			<div class="navList">
 				<ul>
-					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
-					<li><a class="navLink" href="about.html">About</a></li>
-					<li><a class="navLink" href="../../media/resume.pdf">Resume</a></li>
-					<li><a class="navLink" href="content.html">Contact</a></li> 
+					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
+					<li><a class="navLink" href="../../about.html">About</a></li>
+					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>z
+					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
 				</ul>
 			</div>
 		</nav>
