--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
 					<li><a class="navLink" href="media/resume.pdf">R&eacute;sum&eacute;</a></li>
-					<li><a class="navLink" href="contact.html">Contact</a></li> 
+					<li><a class="navLink" href="notes.html">Notes</a></li> 
 				</ul>
 			</div>
 		</nav>
@@ -44,13 +44,14 @@
 			<a href="pieces/Music/musicvis.html">
 				<div id="musiclink"></div>
 			</a>
+			<!--
 			<a href="pieces/HumansVsZombies/hvz.html">
 				<div id="hvzlink"></div>
 			</a>
 			<a href="pieces/DjangoWebsite/django.html">
 				<div id="djangounlinked"></div>
 			</a>
-						
+			-->		
 		</div>		
 	</body>
 </html>
