--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
 					<li><a class="navLink" href="media/resume.pdf">R&eacute;sum&eacute;</a></li>
-					<li><a class="navLink" href="contact.html">Contact</a></li> 
+					<li><a class="navLink" href="notes.html">Notes</a></li> 
 				</ul>
 			</div>
 		</nav>
