Filled in html for notes page

--- a/notes.html
+++ b/notes.html
@@ -27,6 +27,20 @@
 			<h1>I create visual and interactive applications</h1>
 			<p>Programming | Developing | Modeling</p>
 		</section>
-				
+		<div class="contentsmall">
+			<h3>
+				All of the html and css code in this project is mine. The design is
+				influenced by a number of similar portfolio sites that I thought 
+				looked good (although my site didn't turn out nearly as good as any
+				of them). All pictures as also mine. The largest problem I faced was
+				finding the time to do this project. The second was determining what
+				layout I should go with for the site. The third was getting the site
+				to stay responsive at different screen sizes. The first two can't 
+				really be improved on or avoided that easily. The third will become
+				easier the more that I work with web development. Just doing this 
+				project has helped me learn how sites should be set up and organized
+				on a more basic level so that making it responsive is easier. 
+			</h3>
+		</div>
 	</body>
 </html>
