Fixed validation issues

--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
 		<!-- Uncomment when logo is complete and converted to an ico file -->
 		<!-- <link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico" -->
@@ -18,7 +19,7 @@
 				<ul>
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
-					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>z
+					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
 				</ul>
 			</div>
@@ -49,7 +50,7 @@
 		</div>
 		<div class="content">
 			<div class="largerow">
-				<img src="asteroidCapture.png" width="50%" height="auto" alt="Asteroids game" />
+				<img src="asteroidCapture.png"  alt="Asteroids game" />
 				<h3>
 					This is an adaptation of the classic game Asteroids that I made in processing and 
 					later converted to javascript. In this version of the game, the asteroids have 
