--- a/pieces/Music/musicvis.html
+++ b/pieces/Music/musicvis.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
 		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
@@ -17,7 +18,7 @@
 				<ul>
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
-					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>z
+					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
 				</ul>
 			</div>
@@ -29,7 +30,7 @@
 		</section>
 		<div class="content">
 			<div class="largerow">
-				<img src="Capture.PNG" width="50%" height="auto" alt="" />
+				<img src="Capture.PNG"  alt="main title" />
 				<h3>This is  a music visualizer that I made in Processing. It 
 					starts out by showing the title coming into focus with the 
 					use of Guassian blur. The title can be changed in the code 
@@ -39,14 +40,14 @@
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture4.PNG" width="50%" height="auto" alt="" />
+				<img src="Capture4.PNG"   alt="title exploded" />
 				<h3>The dots also have physics functions which allow forces
 					to be applied to them. Using these functions, the title
 					is disintegrated and the main visualizer is faded in. 
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture2.PNG" width="50%" height="auto" alt="" />
+				<img src="Capture2.PNG"   alt="waveforms" />
 				<h3>The main music visualizer shows the waveform for the song
 					at the top and the bottom as well as a large, stationary
 					dot in the middle which pulsates based on the minim beat
@@ -54,7 +55,7 @@
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture3.PNG" width="50%" height="auto" alt="" />
+				<img src="Capture3.PNG"  alt="spectrograph" />
 				<h3>A spectrograph is also shown on the right and dots
 					move from right to left in the background at different
 					rates to give an illusion of movement. The dots differing
@@ -63,7 +64,7 @@
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture5.PNG" width="50%" height="auto" alt="" />
+				<img src="Capture5.PNG"   alt="id3 tags" />
 				<h3>At the end of the song, the ID3 tags are pulled and 
 					information such as the song title, author, album
 					and duration are shown.
