--- a/pieces/SwitchBlade/switchblade.html
+++ b/pieces/SwitchBlade/switchblade.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
 		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
@@ -17,7 +18,7 @@
 				<ul>
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
-					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>z
+					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
 				</ul>
 			</div>
@@ -29,7 +30,7 @@
 		</section>
 		<div class="content">
 			<div class="largerow">
-				<img src="TitleScreen.png" width="50%" height="auto" alt="title screen" />
+				<img src="TitleScreen.png"  alt="title screen" />
 				<h3>I created this game with <a href="https://www.linkedin.com/in/thenelsonscott">Nelson Scott</a>,
 				<a href="https://www.linkedin.com/in/hawkdanny">Daniel Hawk</a>, and
 				<a href="https://www.linkedin.com/in/petertlockhart">Peter Lockhart</a> during my Freshman year of college.
@@ -38,14 +39,14 @@
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="LoadingScreen.jpg" width="50%" height="auto" alt="LoadingScreen.jpg" />
+				<img src="LoadingScreen.jpg"  alt="LoadingScreen.jpg" />
 				<h3>The game had a custom character creation feature and special abilities specific to 
 					each of the four factions. My main role was with the map generation which was completely
 					procedural.
 				</h3>
 			</div>
 			<div class="largerow">
-				<img src="Capture.png" width="50%" height="auto" alt="LoadingScreen.jpg" />
+				<img src="Capture.png"  alt="LoadingScreen.jpg" />
 				<h3>The map creation process included my own implementation of Perlin noise.
 					This was used to blend two background textures as well as creating the 
 					edges of the pathways. Placement of objects and the setting of collision
