--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
