--- a/notes.html
+++ b/notes.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
@@ -39,7 +40,9 @@
 				really be improved on or avoided that easily. The third will become
 				easier the more that I work with web development. Just doing this 
 				project has helped me learn how sites should be set up and organized
-				on a more basic level so that making it responsive is easier. 
+				on a more basic level so that making it responsive is easier.<br />
+				For above and beyond, I put my version of the game Asteroids in the 
+				site with javascript.  
 			</h3>
 		</div>
 	</body>
