--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
 		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
@@ -17,7 +18,7 @@
 				<ul>
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
-					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>z
+					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
 				</ul>
 			</div>
@@ -29,25 +30,25 @@
 		</section>
 		<div class="content">
 			<div class="largerow">
-				<img src="Minion4KReference.png" width="50%" height="auto" alt="tpose minion" />
+				<img src="Minion4KReference.png"  alt="tpose minion" />
 				<h3>I made this minion at the end of my Senior year of high school with Autodesk
 					Maya. Most of the materials were made with MentalRay.
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Final Shading 2.png" width="50%" height="auto" alt="closeup minion" />
+				<img src="Final Shading 2.png"   alt="closeup minion" />
 				<h3>The design is relatively low-poly with just 8 sides to the eye-piece. These images
 					are showing the smooth mesh previews of the model. 
 				</h3>	
 			</div>	
 			<div class="largerow">
-				<img src="joints.png" width="50%" height="auto" alt="rigged minion" />
+				<img src="joints.png"  alt="rigged minion" />
 				<h3>I ended up fully rigging and weight painting the model and was planning on making 
 					animations with it but my hard drive crashed and I lost the file. 
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture.png" width="50%" height="auto" alt="metal mug" />
+				<img src="Capture.png"  alt="metal mug" />
 				<h3>I had even modeled and textured a closed top coffee mug for the minion based on the
 					coffee mug that I own.  
 				</h3>	
