--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
 		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
@@ -17,7 +18,7 @@
 				<ul>
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
-					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>z
+					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
 				</ul>
 			</div>
@@ -29,7 +30,7 @@
 		</section>
 		<div class="content">
 			<div class="largerow">
-				<img src="ChromeLvl5.jpg" width="50%" height="auto" alt="chrome engines" />
+				<img src="ChromeLvl5.jpg" alt="chrome engines" />
 				<h3>This is a stylized render of the fifth level of a game that I made with a couple
 					friends during my Senior year of high school. My main role during the game creation
 					process was 3D modeling and AI programming. I worked alongside 
