created contruction page

--- a/index1.html
+++ b/index1.html
@@ -48,7 +48,7 @@
 			</ul>
 		</div>
 		<footer>
-			<h7>&copy Ryan Bell 2015 All Rights Reserved</h7>
+			<h7>&copy; Ryan Bell 2015 All Rights Reserved</h7>
 		</footer>
 	</body>
 </html>
