css for the index page

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link href="230.css" rel="stylesheet" media="screen">
-		<link href="printable.css" rel="stylesheet" media="print">
+		<link href="230.css" rel="stylesheet">
 		<title>Ryan's Homepage</title>
 	</head>
 	<body>
 		<header>
-			<h1>RIT IGME 230 Web Design and Implementation</h1>	
+			<h2>RIT IGME 230 Web Design and Implementation</h2>	
 		</header>
 		<div id="leftColumn">
 			<h3><a href="">Class List</a></h3>
@@ -39,13 +38,13 @@
 		<div id="rightColumn">
 			<img src="me.jpg" alt="The only picture of me I have" title="Freshman me" />
 			<h3>My career interests</h3>
-			<ul>
+			<ol>
 				<li>To develop rendering engines such as Octane or LuxRender</li>
 				<li>To work on augmented reality projects</li>
 				<li>To design and implement creative new algorithms for the<br />
 					procedural generation of environments, animations, or models<br />
 					for games or movies</li>
-			</ul>
+			</ol>
 		</div>
 		<footer>
 			<h7>&copy; Ryan Bell 2015 All Rights Reserved</h7>
