Navbar links highlight on hover and home link fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="home.html">RYAN BELL</a>
+				<a href="#">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
