--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="home.html">RYAN BELL</a>
+				<a href="portfolio.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
