--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -13,7 +13,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="../../home.html">RYAN BELL</a>
+				<a href="../../portfolio.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
