nav links have undelines for active page

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 			<div class="navList">
 				<ul>
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
-					<li><a class="navLink" href="about.html">About</a></li>
+					<li style="	border-bottom: 3px;	border-bottom-style: solid;	border-bottom-color: #fff;"><a class="navLink" href="about.html">About</a></li>
 					<li><a class="navLink" href="media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="notes.html">Notes</a></li> 
 				</ul>
