--- a/pieces/HumansVsZombies/hvz.html
+++ b/pieces/HumansVsZombies/hvz.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
-		<!-- Uncomment when logo is complete and converted to an ico file -->
-		<!-- <link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico" -->
+		
+		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>	
 	</head>
 	<body>
