changing div name to header tags

--- a/notes.html
+++ b/notes.html
@@ -24,10 +24,10 @@
 			</div>
 		</nav>
 		
-		<section id="introduction">
+		<header>
 			<h1>I create visual and interactive applications</h1>
 			<p>Programming | Developing | Modeling</p>
-		</section>
+		</header>
 		<div class="contentsmall">
 			<h3>
 				All of the html and css code in this project is mine. The design is
