--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
 			</div>
 		</nav>
 		
-		<section id="introduction">
+		<header>
 			<h1>I create visual and interactive applications</h1>
 			<p>Programming | Developing | Modeling</p>
-		</section>
+		</header>
 		
 	</body>
 </html>
