--- a/notes.html
+++ b/notes.html
@@ -30,6 +30,7 @@
 		</header>
 		<div class="contentsmall">
 			<h3>
+				<!--
 				All of the html and css code in this project is mine. The design is
 				influenced by a number of similar portfolio sites that I thought 
 				looked good (although my site didn't turn out nearly as good as any
@@ -42,7 +43,16 @@
 				project has helped me learn how sites should be set up and organized
 				on a more basic level so that making it responsive is easier.<br />
 				For above and beyond, I put my version of the game Asteroids in the 
-				site with javascript.  
+				site with javascript. -->
+				Fixes from Project 2:<br />
+				-The link on my 230 main page is fixed to actually point to the project
+				now<br />
+				-The copyright at the bottom of the page was changed from 2016 to 2015<br />
+				-Navigation not intuitive issue was fixed by making the links highlight on 
+				hover and making a bottom border for the page that is currently being viewed<br />
+				-Tags were changed from divs with ids to header, nav etc. <br />
+				-Header height was reduced to make it not waste as much space (CRAP principles)<br />
+				- 
 			</h3>
 		</div>
 	</body>
