--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
-		<link rel="shortcut icon" type="iamge/x-icon" href="media/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
 		<title>Ryan Bell</title>
 	</head>
 	<body>
